--- a/front-react/src/App.css
+++ b/front-react/src/App.css
@@ -19,3 +19,10 @@
   display: flex;
   align-items: center;
 }
+
+.App-wrapper {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
